<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".resultActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dep_result"
            android:textSize="12pt"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/deposer"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="23489454P"
            android:id="@+id/result_CIF"
            android:textSize="10pt"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/result_x_residuos"
            android:text="1 residuo depositado: "/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Material Informático"
            android:id="@+id/result_tipo_residuo"
            android:textSize="10pt"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/result_cost_text"
            android:text="@string/cost"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/result_cost"
            android:textSize="10pt"
            android:text="89 Kg * 2,5€/Kb\t\t\t222,5€\nIVA (20%)\t\t\t\t\t\t\t\t\t44,5€\n-------------------------------------------\nTotal \t\t\t\t\t\t\t\t\t\t\t\t\t\t267€"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sendbymail"
            android:id="@+id/button_sendbymail"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reg_dep"
            android:id="@+id/button_reg_dep"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"/>

    </LinearLayout>

</RelativeLayout>
